tag-1.3.1 20211213
  - Set unknown/anonymous use_user values when the input doesn't have it

tag-1.3.0 20211210
  - Standarize unknown/anonymous use_user values